# p2p-tg-bot

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: db_session.py  models.py  schemas.py
migration/versions/: 34c895c9647a_order_add_rate_field.py  6b75bf4899bd_initial.py
